kubernetes/apps/pod/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: static-html-pod
  labels:
    app: static-html-pod
spec:
  containers:
    - name: static-html
      image: zcloudws/zcloud-br-workshop-2023-08:html-static
      imagePullPolicy: Always
      ports:
        - containerPort: 80
          name: http
          protocol: TCP
      resources:
        requests:
          cpu: 50m
          memory: 64M
        limits:
          cpu: 100m
          memory: 128M
      livenessProbe:
        periodSeconds: 10
        successThreshold: 1
        failureThreshold: 10
        httpGet:
          path: /
          port: 80
          scheme: HTTP
      readinessProbe:
        periodSeconds: 10
        successThreshold: 1
        failureThreshold: 10
        httpGet:
          path: /
          port: 80
          scheme: HTTP
