kubernetes/apps/pod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: static-html-svc
spec:
  selector:
    app: static-html-pod
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
