kubernetes/apps/pod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: static-html-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  rules:
    - host: app-1.workshop.zcloud.ws
      http:
        paths:
          - backend:
              service:
                name: static-html-svc
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - app-1.workshop.zcloud.ws
      secretName: static-html-ingress-tls
